selfhost/test/typechecker/funcdecl_error_type_mismatch_param_default_value.1.out
Error at %FILE_NAME%:1:19
Type mismatch
  |  func foo(a: Int = "foo") {}
                       ^
Expected: Int
but instead found: String
